# RayTracingCpp

./: .gitignore  CMakeLists.txt  README.md
include/: AABB.hpp  Camera.hpp  DeviceManager.hpp  GraphicsPipeline.hpp  Image.hpp  ImageLoader.hpp  Interval.hpp  Paths.hpp  QueueFamilyIndices.hpp  Random.hpp  Ray.hpp  RenderPass.hpp  Renderer.hpp  Scene.hpp  Shader.hpp  SwapChainManager.hpp  VulkanApp.hpp  VulkanBuffer.hpp  VulkanCommandManager.hpp  VulkanComputePipeline.hpp  VulkanDescriptorManager.hpp  VulkanDeviceManager.hpp  VulkanImage.hpp  VulkanSceneTypes.hpp  VulkanShader.hpp
include/Geometry/: IHittableObject.hpp  Plane.hpp  Sphere.hpp
include/Material/: Emissive.hpp  IMaterial.hpp  Lambertian.hpp  Matte.hpp  Metal.hpp
include/Renderer/: Renderer.hpp
include/Scene/: IHittableObject.hpp  Plane.hpp  Scene.hpp  Sphere.hpp
include/Texture/: ITexture.hpp  Texture2D.hpp
resources/Metal_golden/: Metal048A_1K-PNG.mtlx  Metal048A_1K-PNG.usdc
resources/Plastic_blue/: Plastic008_1K-PNG.mtlx  Plastic008_1K-PNG.usdc
resources/Plastic_green/: Plastic017B_1K-PNG.mtlx  Plastic017B_1K-PNG.usdc
resources/Plastic_orange/: Plastic014A_1K-PNG.mtlx  Plastic014A_1K-PNG.usdc
shaders/: ray_tracer.comp  ray_tracer.comp.spirv
src/: Camera.cpp  Camera.hpp  DeviceManager.cpp  GraphicsPipeline.cpp  HittableObject.hpp  Image.cpp  ImageLoader.cpp  Interval.hpp  Paths.cpp  Plane.cpp  Plane.hpp  Random.cpp  RenderPass.cpp  Renderer.cpp  Scene.cpp  Scene.hpp  Shader.cpp  Sphere.cpp  Sphere.hpp  SwapChainManager.cpp  VulkanApp.cpp  VulkanBuffer.cpp  VulkanCommandManager.cpp  VulkanComputePipeline.cpp  VulkanDescriptorManager.cpp  VulkanDeviceManager.cpp  VulkanImage.cpp  VulkanShader.cpp  main.cpp  ray.cpp  ray.hpp
src/Geometry/: Plane.cpp  Sphere.cpp
src/Material/: Emissive.cpp  Lambertian.cpp  Matte.cpp  Metal.cpp
src/Renderer/: Renderer.cpp
src/Scene/: Plane.cpp  Scene.cpp  Sphere.cpp
src/Texture/: Texture2D.cpp
